# LiquidBattle

./: CMakeLists.txt  LICENSE  README.md
doc/: CollisionData.md  ColorSet.md  LiquidBattle.md  MyDebug.md  Obstacle.md  Player.md
liquidfun-gcc9/freeglut/: CMakeLists.txt
liquidfun-gcc9/freeglut/src/mswin/: fg_main_mswin.c
liquidfun-gcc9/googletest/: CMakeLists.txt
liquidfun-gcc9/liquidfun/Box2D/: CMakeLists.txt
liquidfun-gcc9/liquidfun/Box2D/Box2D/Dynamics/: b2Body.cpp  b2Body.h  b2World.cpp
liquidfun-gcc9/liquidfun/Box2D/Unittests/: CMakeLists.txt
liquidfun-gcc9/liquidfun/Box2D/glui/: glui_filebrowser.cpp
src/: CollisionData.h  ColorSet.h  LiquidBattle.cpp  LiquidBattle.h  MyDebug.h  Obstacle.h  Player.h  TestEntries.cpp
src/framework/: Main.cpp
